# photo2bldg

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  PhotoTo3D.sln  path.txt
PhotoTo3D/: ArchPrism.h  Asset.h  CGA.cpp  CGA.h  CVUtils.cpp  CVUtils.h  Camera.cpp  Camera.h  CenterOperator.cpp  CenterOperator.h  Circle.cpp  Circle.h  ColorOperator.cpp  ColorOperator.h  CompOperator.cpp  CompOperator.h  CopyOperator.cpp  CopyOperator.h  CornerCutGableRoof.cpp  CornerCutGableRoof.h  CornerCutOperator.cpp  CornerCutOperator.h  CornerCutPrism.cpp  CornerCutRectangle.cpp  CornerCutRectangle.h  CornerCutTaper.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  CylinderSide.cpp  CylinderSide.h  ExtrudeOperator.cpp  ExtrudeOperator.h  FacadeEstimation.cpp  FacadeEstimation.h  FacadeReconstruction.cpp  FacadeReconstruction.h  FacadeSegmentation.cpp  FacadeSegmentation.h  (+119 more)
PhotoTo3D/GeneratedFiles/: ui_BuildingReconstructionDialog.h  ui_MainWindow.h  ui_MassReconstructionDialog.h  ui_OptionDialog.h
PhotoTo3D/cga/facade/: facade_01.xml  facade_02.xml  facade_03.xml  facade_04 - Copy.xml  facade_04.xml  facade_05 - Copy.xml  facade_05.xml  facade_06 - Copy.xml  facade_06.xml  facade_07 - Copy.xml  facade_07.xml  facade_08.xml
PhotoTo3D/cga/facade - Copy/: facade_02.xml  facade_06.xml
PhotoTo3D/cga/mass/: contour_01.xml  contour_02.xml  contour_03.xml  contour_04.xml  contour_05.xml  contour_06.xml  contour_07.xml  contour_08.xml  contour_09.xml  contour_10.xml
PhotoTo3D/cga/material/: bldg11.xml  bldg14.xml  bldg2.xml  bldg29.xml  bldg3.xml  bldg35.xml  bldg43.xml  bldg45.xml  bldg5.xml  bldg7.xml  bldg8.xml  material.xml
PhotoTo3D/cga/window/: window_01.xml  window_02.xml  window_03.xml  window_04.xml  window_05.xml  window_06.xml  window_07.xml  window_08.xml  window_09.xml  window_10.xml  window_11.xml  window_12.xml  window_13.xml  window_14.xml  window_15.xml  window_17.xml  window_18.xml  window_19.xml  window_20.xml  window_21.xml  window_22.xml  window_25.xml  window_26.xml  window_27.xml  window_28.xml  window_30.xml  window_31.xml
PhotoTo3D/data/: 01.ctr  02.ctr  03.ctr  03_2.ctr  04.ctr  05.ctr  06.ctr  07.ctr  07b.ctr  08.ctr  08.xml  09.ctr  09b.ctr  10.ctr  11.xml  13.ctr  14.ctr  14.xml  15.ctr  15_2.ctr  16.ctr  17.xml  18.ctr  18.xml  19.ctr  20.ctr  21.ctr  21.xml  21_2.ctr  23.ctr  24.ctr  26.ctr  27.ctr  28.xml  29.ctr  30.ctr  30.xml  31.ctr  32.ctr  33.ctr  (+48 more)
PhotoTo3D/data/old/: 02.ctr  04.ctr  07.ctr  13.ctr  15.ctr  17.ctr  18.ctr  21.ctr  25.ctr  27b.ctr  36.ctr  46.ctr  47.ctr  48.ctr  50.ctr
PhotoTo3D/material/: 1_glass_2_blue.tif  window.1b.tif
PhotoTo3D/results/: 24.xml  50.xml  74.xml  test.xml
PhotoTo3D/shaders/: frag_line.glsl  frag_shadow.glsl
caffelib/: caffelib.vcxproj  caffelib.vcxproj.filters
client/: CMakeLists.txt
client/src/: BuildingReconstructionDialog.cpp  Camera.cpp  Camera.h  Client.cpp  Client.h  Client.ui  GLWidget3D.cpp  GLWidget3D.h  MassReconstructionDialog.cpp  MassReconstructionDialog.h  OBJReader.cpp  OBJReader.h  OptionDialog.ui  VanishingPoint.h  main.cpp  sh_f.glsl  sh_v.glsl  util.cpp  util.h
client/src/data/: tmp.obj.mtl
doc/: Figures.pptx  PhotoTo3D.docx
extras/: FindEGL.cmake
lib/: caffelib.lib  caffelibd.lib
server/: CMakeLists.txt
server/src/: Asset.cpp  CGA.cpp  CGA.h  Camera.h  CenterOperator.cpp  Classifier.cpp  Classifier.h  ColorOperator.h  CompOperator.h  CopyOperator.cpp  CornerCutOperator.h  CornerCutTaper.cpp  ExtrudeOperator.h  FacadeReconstruction.h  GL3D.cpp  GL3D.h  GLUtils.h  GeneralObject.h  Grammar.cpp  HemisphereOperator.cpp  HoughTransform.cpp  InnerCircleOperator.h  InsertOperator.cpp  InsertOperator.h  LShapePrism.cpp  LShapeTaper.cpp  LShapeTaper.h  MassReconstruction.cpp  MassReconstruction.h  NumberEval.h  OBJWriter.cpp  OffsetOperator.cpp  Polygon.cpp  PyramidOperator.cpp  RectangleTaper.cpp  Regression.cpp  Regression.h  RenderManager.cpp  RenderManager.h  RoofGableOperator.h  (+21 more)
shaders/: lc_frag_contour.glsl  lc_frag_pass1.glsl  lc_frag_ssao.glsl  lc_vert_blur.glsl  lc_vert_line.glsl  lc_vert_shadow.glsl  lc_vert_ssao.glsl
src/: Arch.cpp  Arch.h  ArchPrism.cpp  BuildingReconstructionDialog.h  BuildingReconstructionDialog.ui  CGA.cpp  CGA.h  CVUtils.h  ColorOperator.cpp  CopyOperator.h  CornerCutPrism.h  FacadeSegmentation.h  GLWidget3D.cpp  GLWidget3D.h  GeneralObject.cpp  Grammar.h  GrammarParser.cpp  GrammarParser.h  HipRoof.h  HoughTransform.cpp  HoughTransform.h  InnerSemiCircleOperator.cpp  MainWindow.h  MassReconstruction.cpp  MassReconstructionDialog.h  OBJLoader.cpp  OffsetOperator.h  Polygon.h  Prism.h  PyramidOperator.h  RenderManager.cpp  RenderManager.h  RoofGableOperator.cpp  SetupProjectionOperator.h  Shader.cpp  ShadowMapping.cpp  ShadowMapping.h  Shape.h  ShapeUOperator.h  SizeOperator.h  (+7 more)
src/GeneratedFiles/: qrc_MainWindow.cpp
src/caffe/: data_transformer.cpp
src/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe_pb2.py
src/caffe/proto - Copy/: caffe.pb.cc  caffe.pb.h  caffe_pb2.py
src/caffe/util/: db_lmdb.cpp
src/cga/door/: door_01.xml
src/cga/facade/: facade_01.xml  facade_03.xml  facade_04.xml  facade_05.xml  facade_06.xml  facade_07.xml  facade_08 - Copy.xml  facade_08.xml
src/cga/facade - Copy/: facade_01.xml  facade_03.xml
src/cga/mass/: contour_01.xml  contour_05.xml  contour_06.xml  contour_08.xml  contour_10.xml
src/cga/material/: bldg2.xml  bldg45.xml  material.xml
src/cga/window/: window_01.xml  window_02.xml  window_03.xml  window_04.xml  window_05.xml  window_06.xml  window_08.xml  window_10.xml  window_12.xml  window_14.xml  window_16.xml  window_18.xml  window_23.xml  window_24.xml  window_27.xml  (+1 more)
src/data/: 01.ctr  02.xml  03.ctr  03.xml  03_inaccurate.ctr  06.ctr  11.ctr  12.ctr  13.ctr  15.ctr  16.ctr  17.ctr  18.ctr  22.ctr  24.xml  25.ctr  26.xml  28.ctr  29.ctr  29.xml  31.xml  33.xml  34.ctr  35.xml  36.ctr  39.xml  40.ctr  41.xml  43.ctr  44.xml  45.xml  46.ctr  47.xml  49.ctr  52.ctr  53.ctr  54.ctr  56.ctr  57.ctr  58.ctr  (+44 more)
src/results/: 71.xml
src/shaders/: frag_blur.glsl  vert_pass1.glsl
(+35 files in other folders)
